# FinalICP

./: .gitignore  .gitmodules  CMakeLists.txt
finalicp/include/matrixoperator/: matrixindexing.hpp
include/: slam.hpp
include/common/: parseutils.hpp  stopwatch.hpp  timer.hpp
include/evaluable/: evaluable.hpp  jacobians.hpp  node.hpp  statekey.hpp  statevar.hpp
include/evaluable/imu/: accerrorevaluator.hpp  dmierrorevaluator.hpp  evaluables.hpp  gyroerrorevaluator.hpp  gyroerrorevaluatorse2.hpp  imuerrorevaluator.hpp
include/evaluable/p2p/: evaluables.hpp  p2planeerrorevaluator.hpp  p2planeerrorglobalperturbevaluator.hpp  velerrorevaluator.hpp  yawerrorevaluator.hpp  yawvelerrorevaluator.hpp
include/evaluable/se3/: composeevaluator.hpp  composeinverseevaluator.hpp  composevelocityevaluator.hpp  evaluables.hpp  expmapevaluator.hpp  inverseevaluator.hpp  logmapevaluator.hpp  poseinterpolator.hpp  se3errorevaluator.hpp  se3globalperturbevaluator.hpp  se3statevar.hpp  se3statevarglobalperturbevaluator.hpp
include/evaluable/vspace/: additionevaluator.hpp  evaluables.hpp  matrixmultevaluator.hpp  mergeevaluator.hpp  negationevaluator.hpp  preintvelocitystatevar.hpp  scalarmultevaluator.hpp  vspaceerrorevaluator.hpp  vspaceinterpolator.hpp  vspacestatevar.hpp
include/matrixoperator/: matrix.hpp  matrixbase.hpp  matrixindexing.hpp  matrixsparse.hpp  vector.hpp
include/problem/: optimizationproblem.hpp  problem.hpp  slidingwindowfilter.hpp  statevector.hpp
include/problem/costterm/: basecostterm.hpp  gyrosupercostterm.hpp  imusupercostterm.hpp  p2pconstvelsupercostterm.hpp  p2pglobalperturbsupercostterm.hpp  p2psupercostterm.hpp  preintegratedimucostterm.hpp  preintgratedaccelcostterm.hpp  weightleastsqcostterm.hpp
include/problem/lossfunc/: baselossfunc.hpp  cauchylossfunc.hpp  dcslossfunc.hpp  gemanmcclusrelossfunc.hpp  huberlossfunc.hpp  l1lossfunc.hpp  l2lossfunc.hpp  lossfunc.hpp
include/problem/noisemodel/: basenoisemodel.hpp  dynamicnoisemodel.hpp  staticnoisemodel.hpp
include/solver/: covariance.hpp  dogleggaussnewtonsolver.hpp  gausnewtonsolver.hpp  gausnewtonsolvernva.hpp  levmarqgaussnewtonsolver.hpp  linesearchgaussnewtonsolver.hpp  solverbase.hpp
include/trajectory/: interface.hpp  time.hpp
include/trajectory/bspline/: interface.hpp  variable.hpp  velocityinterpolator.hpp
include/trajectory/constacc/: accelerationextrapolator.hpp  accelerationinterpolator.hpp  helper.hpp  interface.hpp  poseinterpolator.hpp  posextrapolator.hpp  priorfactor.hpp  variable.hpp  velocityextrapolator.hpp  velocityinterpolator.hpp
include/trajectory/constacc/evaluable/: composecurlyhatevaluator.hpp
include/trajectory/constvel/: interface.hpp  poseextrapolator.hpp  velocityinterpolator.hpp
include/trajectory/constvel/evaluable/: jinvvelocityevaluator.hpp  jvelocityevaluator.hpp
include/trajectory/singer/: accelerationextrapolator.hpp  accelerationinterpolator.hpp  helper.hpp  interface.hpp  poseextrapolator.hpp  poseinterpolator.hpp  priorfactor.hpp  velocityextrapolator.hpp  velocityinterpolator.hpp
samples/: BSplineTrajectoryExample.cpp  ConstantVelocityTrajPrior.cpp  MotionPriors.cpp  PointCloudAlingment.cpp  PoseGraphRelax.cpp  SlidingWindow.cpp
src/evaluable/imu/: accerrorevaluator.cpp  dmierrorevaluator.cpp  gyroerrorevaluator.cpp  gyroerrorevaluatorse2.cpp  imuerrorevaluator.cpp
src/evaluable/p2p/: p2perrorevaluator.cpp  p2planeerrorevaluator.cpp  p2planeerrorglobalperturbevaluator.cpp  velerrorevaluator.cpp  yawerrorevaluator.cpp  yawvelerrorevaluator.cpp
src/evaluable/se3/: composeevaluator.cpp  composeinverseevaluator.cpp  composevelocityevaluator.cpp  expmapevaluator.cpp  inverseevaluator.cpp  logmapevaluator.cpp  poseinterpolator.cpp  se3errorevaluator.cpp  se3globalperturbevaluator.cpp  se3statevar.cpp  se3statevarglobalperturbevaluator.cpp
src/matrixoperator/: matrix.cpp  matrixbase.cpp  matrixindexing.cpp  matrixsparse.cpp  vector.cpp
src/problem/: optimizationproblem.cpp  slidingwindowfilter.cpp  statevector.cpp
src/problem/costterm/: gyrosupercostterm.cpp  imusupercostterm.cpp  p2pconstvelsupercostterm.cpp  p2pglobalperturbsupercostterm.cpp  p2psupercostterm.cpp  preintegratedimucostterm.cpp  preintgratedaccelcostterm.cpp
src/solver/: covariance.cpp  dogleggaussnewtonsolver.cpp  gausnewtonsolver.cpp  gausnewtonsolvernva.cpp  levmarqgaussnewtonsolver.cpp  linesearchgaussnewtonsolver.cpp  solverbase.cpp
src/trajectory/bspline/: interface.cpp  velocityinterpolator.cpp
src/trajectory/constacc/: accelerationextrapolator.cpp  accelerationinterpolator.cpp  interface.cpp  poseinterpolator.cpp  posextrapolator.cpp  priorfactor.cpp  velocityextrapolator.cpp  velocityinterpolator.cpp
src/trajectory/constacc/evaluable/: composecurlyhatevaluator.cpp
src/trajectory/constvel/: helper.hpp  interface.cpp  poseextrapolator.cpp  poseinterpolator.cpp  poseinterpolator.hpp  priorfactor.cpp  priorfactor.hpp  variable.hpp  velocityinterpolator.cpp
src/trajectory/constvel/evaluable/: jinvvelocityevaluator.cpp  jvelocityevaluator.cpp
test/: constaccposeinterpolatortest.cpp  jacobiantest.cpp  patterntest.cpp  timetest.cpp
